--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
 p {
     font-style: italic;
     font-size: medium;
+    background-color:aquamarine
 }
 
 para {
     color:black
-
 }
 
+p1 {
+    color:blueviolet
+}
