--- a/style.css
+++ b/style.css
@@ -12,4 +12,7 @@ p1 {
     color:blueviolet
 }
 
-#map { height: 720px; }
+#map { height: 600px; }
+
+#image1 { height: 600px; }
+#image2 { height: 600px; }
