--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 p {
     font-style: italic;
     font-size: medium;
-    background-color:aquamarine
 }
 
 para {
@@ -16,3 +15,8 @@ p1 {
 
 #image1 { height: 600px; }
 #image2 { height: 600px; }
+
+.beam-des {
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    
+}
